<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.androidigniter.excelapp.DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dip">

            <LinearLayout
                android:id="@+id/btn_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/data_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dip"
                    android:layout_weight="6"
                    android:background="@drawable/rounded_blue_button"
                    android:minHeight="32dip"
                    android:text="@string/data_btn"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ots1_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="0.5"
                        android:background="@drawable/rounded_blue_button"
                        android:minHeight="32dip"
                        android:text="@string/data_ots1"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/ots2_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="0.5"
                        android:background="@drawable/rounded_blue_button"
                        android:minHeight="32dip"
                        android:text="@string/data_ots2"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/ots3_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="0.5"
                        android:background="@drawable/rounded_blue_button"
                        android:minHeight="32dip"
                        android:text="@string/data_ots3"
                        android:textAllCaps="false"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/handwork_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/hand_work_icon"
                        tools:srcCompat="@drawable/hand_work_icon" />

                    <TextView
                        android:id="@+id/manpower_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dip"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/title_manpower"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/manpower_daily_status_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_weight="1"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="@string/btn_daily_status"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/manpower_personnel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_weight="1"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="@string/btn_personnel"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/manpower_inefficiencies_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_weight="1"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="@string/btn_inefficiencies"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/manpower_trazability_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_weight="1"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="Trazability"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/manpower_resource_activation_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_weight="1"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="@string/btn_resource_activation"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cranes_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/crane_icon" />

                    <TextView
                        android:id="@+id/crane_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dip"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/title_cranes"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/crane_daily_status_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/btn_daily_status"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/crane_relocations_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="@string/btn_crane_relocations"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/crane_trazability_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_weight="1"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="Trazability"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/crane_inefficiencies_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:background="@drawable/drop_button"
                    android:padding="20dip"
                    android:text="@string/btn_inefficiencies"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
